human_written_tests/WebAssembly/processed_control_flow_validation/test_if_100.wast
(assert_invalid
  (module (func $type-param-nested-void-vs-num
    (block (if (param i32) (i32.const 1) (then (drop))))
  ))
  "type mismatch"
)